<resources>
    <string name="app_name">YoloApp</string>

    <!-- ***************** Pantalla Menu ***************** -->
    <string name="menu_login">Iniciar Sesión</string>
    <string name="menu_sign_up">Registrarse</string>

    <!-- ***************** Pantalla Profile *************** -->
    <string name="profile_button">Tomar fotografía</string>

    <!-- ***************** Pantalla SignUp *************** -->
    <string name="sign_up_title">Crea tu cuenta</string>
    <string name="sign_up_user_name_ph">Nombre de usuario</string>
    <string name="sign_up_email_ph">Correo electrónico</string>
    <string name="sign_up_password_ph">Crea una contraseña</string>
    <string name="sign_up_password_confirmation_ph">Confirma tu contraseña</string>
    <string name="sign_up_age_ph">¿Cuántos años tienes?</string>
    <string name="sign_up_profession_ph">¿Estudiante o profesor?</string>
    <string name="sign_up_button">Continuar</string>
    <string-array name="profession">
        <item>Estudiante</item>
        <item>Profesor</item>
    </string-array>

    <!-- ***************** Pantalla LogIn **************** -->
    <string name="log_in_email">Ingresa tu correo electrónico</string>
    <string name="log_in_email_ph">ejemplo@correo.com</string>
    <string name="login_password">Ingresa tu contraseña</string>
    <string name="log_in_password_ph">Contraseña</string>
    <string name="log_in_forgotpassword"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="log_in_remember">Recordarme en este dispositivo</string>
    <string name="log_in_button">Iniciar Sesión</string>


    <!-- ***************** Categorias**************** -->
    <string-array name="Categorias">
        <item>Salud sexual</item>
        <item>Finanzas</item>
        <item>Vida laboral</item>
        <item>Medio ambiente</item>
        <item>Salud</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ***************** Pantalla Cambiar contraseña **************** -->
    <string name="cha_pass_uno">Contraseña actual</string>
    <string name="cha_pass_nueva">Nueva contraseña</string>
    <string name="cha_pass_confir">Confirmar</string>
</resources>