<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="@color/grey_background">

    <TextView
        android:id="@+id/log_in_txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="144dp"
        android:text="@string/log_in_email"
        android:textColor="@color/grey_letters"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/log_in_editText_email"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundstyle"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/log_in_email_ph"
        android:textColor="@color/grey_placeholders"
        android:textSize="15dp"
        android:paddingLeft="15dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_email" />

    <TextView
        android:id="@+id/log_in_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/login_password"
        android:textColor="@color/grey_letters"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_editText_email" />

    <EditText
        android:id="@+id/log_in_editText_password"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundstyle"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/log_in_password_ph"
        android:textColor="@color/grey_placeholders"
        android:textSize="15dp"
        android:paddingLeft="15dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_password" />

    <TextView
        android:id="@+id/log_in_txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/log_in_forgotpassword"
        android:textColor="@color/grey_letters"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_editText_password" />

    <CheckBox
        android:id="@+id/log_in_chkBox_remember"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:hint="@string/log_in_remember"
        android:textColor="@color/purple"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_forgot" />

    <Button
        android:id="@+id/sign_up_btn_logIn"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:hint="@string/log_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_chkBox_remember" />

</androidx.constraintlayout.widget.ConstraintLayout>