<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.bedu.okayapp.Inicio.SignUp"
    android:background="@color/purple_background">


    <TextView
        android:id="@+id/sign_up_txt_title"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_title"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/sign_up_editText_username"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/sign_up_user_name_ph"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/grey_placeholders"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_txt_title"
        app:layout_constraintStart_toStartOf="@+id/sign_up_txt_title"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_txt_title"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_editText_email"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/sign_up_email_ph"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/grey_placeholders"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_username"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_username"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_editText_password"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/sign_up_password_ph"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/grey_placeholders"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_email"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_editText_passwordConfirmation"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/sign_up_password_confirmation_ph"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/grey_placeholders"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_password"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn_continue"
        android:layout_width="316dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/yolo_purple"
        android:text="@string/sign_up_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_RadioGroup"
        app:layout_constraintStart_toStartOf="@+id/sign_up_RadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_RadioGroup"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/sign_up_editText_date"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="Fecha de nacimiento"
        android:inputType="date"
        android:paddingStart="20dp"
        android:textColor="@color/grey_placeholders"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_passwordConfirmation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_passwordConfirmation"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_passwordConfirmation"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/sign_up_RadioGroup"
        android:layout_width="346dp"
        android:layout_height="84dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_date"
        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_date"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_date">

        <RadioButton
            android:id="@+id/signup_radioButton_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Estudiante" />

        <RadioButton
            android:id="@+id/signup_radioButton_professor"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="Profesor" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>